# c_serialization

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  bit_serialize.c  bit_serialize.h  configure.ac  main.c  test.c
.deps/: bit_serialize.Po  main.Po
